styles/inputs.css
:root {
    --input-width: 275px;
    --input-height: 75px;
    --input-gap: 16px;
    --border-radius: 4px;
}

@media (max-width: 615px) {
    :root {
        --input-width: 90vw;
    }

    .photo-carousel {
        max-width: 350px;
    }
}

.page {
    display: inline-block;
    padding: 0 auto;
    padding-left: var(--input-gap);
    margin-top: calc(2*var(--input-gap));
    text-align: center;
}

.no_top_margin {
    margin-top: 0;
}

.column {
    display: inline-block;
    margin-right: var(--input-gap);
    text-align: left;
    vertical-align:top;
}

.wr_description {
    display: block;
    margin: 8px;
    max-width: calc(var(--input-width) - var(--input-padding));
}

.wr_progress {
    display: block;
    margin: 0 auto var(--input-gap);
    width: calc(var(--input-width));
    height: calc(var(--input-height)/2);
}

.wr_checkbox, .wr_counter, .wr_button, .wr_dropdown, .wr_string, .wr_number, .wr_text, .wr_select, .wr_card, .column_header, .page_header, .wr_color, .wr_slider, .wr_status {
    display: block;
    font-size: 16px;
    border-style: solid;
    border-width: 0px;
    border-radius: var(--border-radius);
    border-color: var(--border-color);
    margin: 0 auto var(--input-gap);
    padding: var(--input-padding);
    background-color: var(--foreground-color);
    color: var(--foreground-text-color);
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.wr_card {
    min-width: calc(var(--input-width) - 2*var(--input-padding));
}

#contents_card.wr_card {
    display: inline-block;
}

.wr_checkbox, .wr_counter, .wr_number, .wr_button, .wr_select_option, .page_header, .column_header, .input_label, .match_option, .pit_option, .status_text {
    user-select: none;
    -webkit-touch-callout: none; /* iOS Safari */
    -webkit-user-select: none;
}

.page_header {
    margin-right: var(--input-gap);
    font-size: 24px;
    background-color: var(--primary-color);
    color: var(--secondary-color);
    text-align: left;
}

.column_header {
    font-size: 18px;
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

.page_color {
    background-color: var(--primary-color);
    color: var(--secondary-color);
}

.column_color {
    background-color: var(--secondary-color);
    color: var(--primary-color);
}

.wr_checkbox, .wr_counter, .wr_button, .wr_string, .wr_number, .wr_slider {
    width: calc(var(--input-width) - 2*var(--input-padding));
    min-height: calc(var(--input-height) - 2*var(--input-padding));
}

.wr_slider_range {
    width: calc(var(--input-width) - 2*var(--input-padding));
    min-height: calc(var(--input-height) - 2*var(--input-padding));
}

.wr_checkbox.slim, .wr_counter.slim, .wr_button.slim, .wr_string.slim, .wr_number.slim {
    min-height: calc(var(--input-height)/2 - 2*var(--input-padding));
}

.wr_button.pick_item, .wr_slim_button.pick_item {
    width: calc(var(--input-width)/2 - 2*var(--input-padding));
}

.wr_dropdown {
    width: var(--input-width);
    height: var(--input-height);
}

.wr_dropdown.slim {
    height: var(--input-height)/2;
}

.wr_text {
    width: calc(var(--input-width) - 2*var(--input-padding));
    height: calc(2*var(--input-height) + var(--input-gap) - 2*var(--input-padding));
}

.wr_select {
    min-width: var(--input-width);
    height: var(--input-height);
    display: table;
    table-layout: fixed;
    padding: 0px;
}

.wr_select.slim {
    height: var(--input-height)/2;
}

.wr_button {
    clear: both;
    text-align: center;
}

.wr_dropdown:hover, .wr_select_option:hover, .wr_counter:hover, .wr_checkbox:hover, .wr_button:hover, .wr_string:hover, .wr_text:hover, .wr_slider:hover {
    background-color: var(--hover-color);
    color: var(--hover-text-color);
}

.wr_button > *, .wr_checkbox > *, .wr_counter > *, .wr_dropdown > *, .wr_string > *, .wr_number > *, .wr_text > *, .wr_slider > *, .wr_status > * {
    line-height: calc(var(--input-height) - 2*var(--input-padding));
}

.wr_button.slim > *, .wr_checkbox.slim > *, .wr_counter.slim > *, .wr_dropdown.slim > *, .wr_string.slim > *, .wr_number.slim > *, .wr_text.slim > * {
    line-height: calc(var(--input-height)/2 - 2*var(--input-padding));
}

.wr_counter_count, .wr_number_num {
    font-size: 200%;
}

.wr_number_num {
    font-size: 200%;
    float: right;
}

.wr_select_option {
    height: calc(var(--input-height) - 2*var(--input-padding));
    line-height: calc(var(--input-height) - 2*var(--input-padding));
    padding: var(--input-padding);
    display: table-cell;
    text-align: center;
    border-radius: var(--border-radius);
}

.vertical {
    display: block;
}

.wr_select_option.slim {
    height: calc(var(--input-height)/2 - 2*var(--input-padding));
    line-height: calc(var(--input-height)/2 - 2*var(--input-padding));
}

.wr_color, .wr_status {
    width: calc(var(--input-width) - 2*var(--input-padding));
    height: calc(var(--input-height) - 2*var(--input-padding));
}

.color_text {
    display: inline-block;
    width: calc(var(--input-width) - var(--input-height) - 2*var(--input-padding));
    height: calc(var(--input-height) - 2*(var(--input-padding)));
    float: left;
    padding: 0;
    margin: 0;
    margin-top: 1px;
    border: none;
    font-size: 16px;
    background-color: var(--foreground-color);
    color: var(--foreground-text-color);
}

.status_text {
    display: block;
    width: calc(var(--input-width) - var(--input-height) - 2*var(--input-padding));
    height: calc(var(--input-height) - 2*(var(--input-padding)));
    float: left;
    padding: 0;
    margin: 0;
    border: none;
    font-size: 16px;
}

.color_box {
    display: inline-block;
    padding: 0;
    margin: 0;
    margin-left: 30px;
    width: calc(var(--input-height) - 2*(var(--input-padding)));
    height: calc(var(--input-height) - 2*(var(--input-padding)));
    border: 0px solid black;
}

.selected {
    background-color: var(--active-color);
    color: var(--active-text-color);
}

.input_label {
    margin: 8px;
    max-width: calc(var(--input-width) - var(--input-padding));
}

.disabled {
    color: var(--disabled-text-color);
    background-color: var(--disabled-color);
    box-shadow: unset;
}

.crossed_out {
    text-decoration: line-through;
    color: red;
}

.cycle {
    background-color: #FF00FF22;
}

.red_box {
    box-shadow: 0 4px 8px 0 rgba(255, 0, 0, 0.2), 0 6px 20px 0 rgba(255, 0, 0, 0.19);
}

.blue_box {
    box-shadow: 0 4px 8px 0 rgba(0, 0, 255, 0.2), 0 6px 20px 0 rgba(0, 0, 255, 0.19);
}

.thin {
    width: auto;
    min-width: 0;
}

.photo-carousel, .scouting-carousel {
    overflow-x: scroll;
    overflow-y: hidden;
    white-space: nowrap;
    scroll-snap-type: x mandatory;
}

.photo-carousel > img, .scouting-carousel > .page {
    scroll-snap-align: start;
    white-space: normal;
}

.photo-carousel > img {
    vertical-align: middle;
    width: 100%;
    max-height: 550px;
    object-fit: cover;
}

.scouting-carousel > .page {
    vertical-align: top;
    width: 100%;
    padding: 0;
}

.scouting-carousel > .page > .page_header {
    margin-right: 0px;
}

.scouting-carousel > .page > .column {
    margin-left: calc(var(--input-gap)/2);
    margin-right: calc(var(--input-gap)/2);
}

.profile {
    text-align: center;
    padding: 0;
}

.wr_card h1 {
    margin: 0;
    background-color: gray;
    padding: var(--input-padding);
}

.wr_card .card_body {
    text-align: left;
    padding: var(--input-padding);
}

.links {
    text-align: center;
    display: flex;
    justify-content: space-between;
}

.selection_filter > .wr_button {
    width: calc(299px - 2*var(--input-padding));
    margin: 4px auto;
}

.selection_filter > .wr_dropdown {
    width: 299px;
    margin: 4px auto;
}

